Fix video control being hiden behind "full" image

--- a/gallery.css
+++ b/gallery.css
@@ -213,6 +213,7 @@
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
+	z-index: -9;
 }
 
 
